# agent-teams-scaffold

./: CHANGELOG.md  CLAUDE.md  CLAUDE.md.tmpl  LICENSE  README.md  SKILL.md  TEAM_PROMPTS.md.tmpl  pyproject.toml  security-reviewer.md.tmpl
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml
assets/: launch-team.fish.tmpl
scripts/: scaffold.py
skills/agent-teams-scaffold/: SKILL.md
skills/agent-teams-scaffold/assets/: CLAUDE.md.tmpl  TEAM_PROMPTS.md.tmpl  launch-team.sh.tmpl
skills/agent-teams-scaffold/scripts/: scaffold.py
tests/: test_scaffold.py
